syntax = "proto3";
package org.okraAx.v3;
option optimize_for = SPEED;
option java_package = "org.okraAx.v3.services";
option java_outer_classname = "ProRoomPublicService";
//option java_generic_services = true;

import "Gpc.proto";

//  player invoke room public service.
service RoomPublicService {
    //  ping-pong
    rpc ping (GpcVoid) returns (GpcVoid);
    rpc onPlayerConnect (GpcVoid) returns (GpcVoid);
    rpc onCreateRoom (GpcVoid) returns (GpcVoid);
    rpc onEnterRoom (GpcVoid) returns (GpcVoid);
    rpc onExitRoom (GpcVoid) returns (GpcVoid);
    rpc onShowHall (GpcVoid) returns (GpcVoid);
    rpc onGetReady (GpcVoid) returns (GpcVoid);
    rpc onGameStart (GpcVoid) returns (GpcVoid);
    rpc onGameEnd (GpcVoid) returns (GpcVoid);
    rpc onChat (GpcVoid) returns (GpcVoid);


}

