syntax = "proto3";
package org.okraAx.v3;
option optimize_for = SPEED;
option java_package = "org.okraAx.v3.room.beans";
option java_outer_classname = "FyRoomMi";
//option java_generic_services = true;
option java_multiple_files = true;

//  创建房间
message VoCreateRoom {
    int32 type = 1;
}
//  加入房间
message VoEnterRoom {
    int32 roomId = 1;   //  房间
    int32 seat = 2;     //  座位号
}
//  准备或取消准备
message VoGetReady {
    int64 uid = 1; //  唯一uid
    bool ready = 2; //  准备/取消准备
}
//  搜索房间
message VoLookupRoom {
    int32 type = 1;
}


